Delete the classname muted from the commentContainer and resolve the contrast error in lighthouse report

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -52,11 +52,12 @@ a:hover i {
 
 /* "No comment" content area */
 .CommentContainer {
-    border: 1px solid rgb(220, 194, 219);
     margin: 0 9%;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 10px;
     margin-top: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    font-weight: 600;
+    color: rgb(53, 33, 52);
 }
 
 i {
